--- a/src/gui/Relatorio.form
+++ b/src/gui/Relatorio.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
     </Component>
@@ -118,7 +118,7 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="jrbAlugado">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Carros Alugados"/>
+        <Property name="text" type="java.lang.String" value="Carros Alugados pelo Cliente"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jrbAlugadoActionPerformed"/>
@@ -147,6 +147,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Gerar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGerarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jtxtTipo">
       <Properties>
